Add some tests for coverage